syntax = "proto3";

package product;

option go_package = "./pkg/pb";

service ProductService {
    rpc CreateProduct(CreateProductRequset) returns (CreateProductResponse) {}
    rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
    rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

// 제품 생성
message CreateProductRequset {
    string name = 1;
    int64 stock = 2;
    int64 price = 3;
}

message CreateProductResponse {
    int64 status = 1;
    string error = 2;
    int64 productInfoId = 3;
}

// 제품 검색
message FindOneData {
    int64 productInfoId = 1;
    string name = 2;
    int64 stock = 3;
    int64 price = 4;
}

message FindOneRequest {
    int64 productInfoId = 1;
}

message FindOneResponse {
    int64 status = 1;
    string error = 2;
    FindOneData data = 3;
}

// 제품 재고 감소
message DecreaseStockRequest {
    int64 productInfoId = 1;
    int64 orderInfoId = 2;
}

message DecreaseStockResponse {
    int64 status = 1;
    string error = 2;
}